Fix TOS checkbox alignment for IE 11 on Win 7

--- a/app/assets/stylesheets/pages/popups.sass
+++ b/app/assets/stylesheets/pages/popups.sass
@@ -1103,7 +1103,7 @@ input[type="text"]:-ms-input-placeholder, input[type="email"]:-ms-input-placehol
       height: 38px
       width: 38px
       border-radius: 8px
-      font: 100 49px/4.4rem FontAwesome
+      font: 100 49px/44px FontAwesome
       cursor: pointer
       display: inline-block
       margin-right: 10px
@@ -1119,7 +1119,7 @@ input[type="text"]:-ms-input-placeholder, input[type="email"]:-ms-input-placehol
         height: 38px
         width: 38px
         border-radius: 8px
-        font: 100 44px/4rem FontAwesome
+        font: 100 44px/40px FontAwesome
         cursor: pointer
         display: inline-block
         margin-right: 10px
